x11: Fix the _NET_SUPPORTING_WM_CHECK window fetch to be spec compliant

"The child window MUST also have the _NET_SUPPORTING_WM_CHECK property set to
the ID of the child window. […] If the _NET_SUPPORTING_WM_CHECK window on the
client window is missing or not properly set, clients SHOULD assume that no
conforming Window Manager is present."

This commit implements that, which allows us to not have to do a
XGetWindowProperty() every N seconds when running under a compliant WM.

This is also a more correct fix for the bug handled in commit
daf29bffeddc02a7ac55905a79d040c299a37eee.

https://bugzilla.gnome.org/show_bug.cgi?id=666921